<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>my_library</name>
	<version>1.0.0</version>
	<description>The library for a ROS library + library user example project</description>
	<maintainer email="your@email.org">nobody</maintainer>
	<license>WTFPL</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
